-0.86 -video player now stops playing when the window is closed (on the past events page) -updated CSS to avoid camera settings dropping to a new line in the menu -for past events: -bookmark clip is extracted from main.mp4 -tag thumbnail is created from main.mp4 -0.85 -file size is formatted through division (not bit shifting) - more accurate -mp4 file is made streamable (via python qtfaststart utility)
-0.84
-checks if the encoder was initialized in all ajax functions before trying to do a database call

--- a/css/kickstart-grid.css
+++ b/css/kickstart-grid.css
@@ -102,10 +102,10 @@ border:1px dotted #ccc;
 	
 }
 
-@media all and (min-width: 768px) and (max-width: 1024px) {
+@media all and (min-width: 860px) and (max-width: 1024px) {
 	
 	.grid *[class*="col_"]{}
-	.grid{max-width: 768px;}
+	.grid{max-width: 860px;}
 	.show-desktop	{display:none;}
 	.hide-desktop	{display:block;}
 	.show-tablet	{display:block;}
@@ -116,7 +116,7 @@ border:1px dotted #ccc;
 }
 
 
-@media all and (min-width: 480px) and (max-width: 768px) {
+@media all and (min-width: 480px) and (max-width: 860px) {
 
 	.grid *[class*="col_"]{
 	float:none;
